Fixing CI workflow (1)

--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Compile LaTeX document
         run: |
+          export TEXINPUTS=./latex-support//:
           cd lab-instructions
           xelatex dodlabs.tex
 
