--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           root_file: lab-instructions/dodlabs.tex
           latexmk_use_xelatex: true
+          work_in_root_file_dir: true
         env:
           TEXINPUTS: ".:lab-instructions//:./latex-support//:"
 
