--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -11,12 +11,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up TeX Live
-        uses: xu-cheng/latex-action@v2
+      - name: Github Action for LaTeX
+        uses: xu-cheng/latex-action@3.2.0
         with:
-          root_file: lab-instructions/dodlabs.tex
           latexmk_use_xelatex: true
-          work_in_root_file_dir: true
+          working_directory: lab-instructions
+          root_file: dodlabs.tex
         env:
           TEXINPUTS: ".:../latex-support//:"
 
