--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -22,9 +22,11 @@ jobs:
         env:
           TEXINPUTS: ".:../latex-support//:./latex-support//:"
 
+      - name: Extract and set tag name
+        run: echo "TAG_NAME=${GITHUB_REF#refs/tags/lab_}" >> $GITHUB_ENV
+
       - name: Rename the output PDF
         run: |
-          TAG_NAME=${GITHUB_REF#refs/tags/lab_}
           mv lab-instructions/dodlabs.pdf lab-instructions/dodlabs_${TAG_NAME}.pdf
 
       - name: Create Release
@@ -33,8 +35,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ env.TAG_NAME }}
+          release_name: Release ${{ env.TAG_NAME }}
           draft: false
           prerelease: false
 
@@ -44,6 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./lab-instructions/dodlabs_${{ github.ref_name }}.pdf
-          asset_name: dodlabs_${{ github.ref_name }}.pdf
+          asset_path: ./lab-instructions/dodlabs_${TAG_NAME}.pdf
+          asset_name: dodlabs_${TAG_NAME}.pdf
           asset_content_type: application/pdf
