--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -46,6 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./lab-instructions/dodlabs_${TAG_NAME}.pdf
-          asset_name: dodlabs_${TAG_NAME}.pdf
+          asset_path: "./lab-instructions/dodlabs_${TAG_NAME}.pdf"
+          asset_name: "dodlabs_${TAG_NAME}.pdf"
           asset_content_type: application/pdf
