--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -3,7 +3,7 @@ name: Build and Release LaTeX Document
 on:
   push:
     tags:
-      - "lab_v*"
+      - "lab_*"
 
 jobs:
   build-and-release:
@@ -35,7 +35,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.TAG_NAME }}
+          tag_name: ${{ github.ref }}
           release_name: Release ${{ env.TAG_NAME }}
           draft: false
           prerelease: false
@@ -46,6 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "./lab-instructions/dodlabs_${TAG_NAME}.pdf"
-          asset_name: "dodlabs_${TAG_NAME}.pdf"
+          asset_path: ./lab-instructions/dodlabs_${{ env.TAG_NAME }}.pdf
+          asset_name: dodlabs_${{ env.TAG_NAME }}.pdf
           asset_content_type: application/pdf
