--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -36,7 +36,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ env.TAG_NAME }}
+          release_name: Lab instructions ${{ env.TAG_NAME }}
           draft: false
           prerelease: false
 
