--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Github Action for LaTeX
-        uses: xu-cheng/latex-action@3.2.0
+        uses: xu-cheng/latex-action@v4
         with:
           latexmk_use_xelatex: true
           work_in_root_file_dir: true
